--- a/doc/src/manual/ch-ned-lang.tex
+++ b/doc/src/manual/ch-ned-lang.tex
@@ -1252,13 +1252,13 @@ The expression syntax is the following:
         Positions start from zero.
   \item Predicate of the form "\ttt{[@attribute=\textit{\$param}]}" are also
         accepted, where \ttt{\textit{\$param}} can be one of:
-        \ttt{\$MODULE_FULLPATH}, \ttt{\$MODULE_FULLNAME}, \ttt{\$MODULE_NAME},
-        \ttt{\$MODULE_INDEX}, \ttt{\$MODULE_ID},
-        \ttt{\$PARENTMODULE_FULLPATH}, \ttt{\$PARENTMODULE_FULLNAME},
-        \ttt{\$PARENTMODULE_NAME}, \ttt{\$PARENTMODULE_INDEX}, \ttt{\$PARENTMODULE_ID},
-        \ttt{\$GRANDPARENTMODULE_FULLPATH}, \ttt{\$GRANDPARENTMODULE_FULLNAME},
-        \ttt{\$GRANDPARENTMODULE_NAME}, \ttt{\$GRANDPARENTMODULE_INDEX},
-        \ttt{\$GRANDPARENTMODULE_ID}.{\new}
+        \ttt{\$MODULE\_FULLPATH}, \ttt{\$MODULE\_FULLNAME}, \ttt{\$MODULE\_NAME},
+        \ttt{\$MODULE\_INDEX}, \ttt{\$MODULE\_ID},
+        \ttt{\$PARENTMODULE\_FULLPATH}, \ttt{\$PARENTMODULE\_FULLNAME},
+        \ttt{\$PARENTMODULE\_NAME}, \ttt{\$PARENTMODULE\_INDEX}, \ttt{\$PARENTMODULE\_ID},
+        \ttt{\$GRANDPARENTMODULE\_FULLPATH}, \ttt{\$GRANDPARENTMODULE\_FULLNAME},
+        \ttt{\$GRANDPARENTMODULE\_NAME}, \ttt{\$GRANDPARENTMODULE\_INDEX},
+        \ttt{\$GRANDPARENTMODULE\_ID}.{\new}
 \end{itemize}
 
 Examples:
