--- a/doc/src/manual/usman-bibl.bib
+++ b/doc/src/manual/usman-bibl.bib
@@ -5,22 +5,22 @@
 
 @Book{Jain91,
   author = "Jain, Raj",
-  title = "The Art of Computer Systems Performance Analysis",
+  title = {{The Art of Computer Systems Performance Analysis}},
   publisher = "Wiley, New York",
   year = 1991,
 }
 
 @Book{BFS86,
   author = "Bratley P. and Fox, B. L. and Schrage, L. E.",
-  title = "A Guide to Simulation",
+  title = {{A Guide to Simulation}},
   publisher = "Springer-Verlag, New York",
   year = 1986
 }
 
 @Article{JCh85,
   author = "Jain, Raj and Chlamtac, Imrich",
-  title = "The {$P^2$} Algorithm for Dynamic Calculation of Quantiles
-           and Histograms without Storing Observations",
+  title = {{The {$P^2$} Algorithm for Dynamic Calculation of Quantiles
+           and Histograms without Storing Observations}},
   journal = "Communications of the ACM",
   volume = 28,
   number = 10,
@@ -35,15 +35,16 @@
 
 @techreport{PongorOmnet,
   author = {Pongor, Gy\"{o}rgy},
-  title = "{OMNET}: An Object-Oriented Network Simulator",
+  title = {{{OMNET}: An Object-Oriented Network Simulator}},
   institution = "Technical University of Budapest, Dept. of Telecommunications",
   year = 1991
 }
 
+
 @techreport{PongorSSM92,
   author = {Pongor, Gy\"{o}rgy},
-  title = "{Statistical Synchronization}: A Different Approach of
-           Parallel Discrete Event Simulation",
+  title = {{Statistical Synchronization: A Different Approach of
+           Parallel Discrete Event Simulation}},
   institution = "University of Technology, Data Communications Laboratory",
   address = "Lappeenranta, Finland",
   year = 1992
@@ -51,22 +52,21 @@
 
 @Inproceedings{PongorSSM93,
   author = {Pongor, Gy\"{o}rgy},
-  title = "On the Efficiency of the {Statistical Synchronization Method}",
+  title = {{On the Efficiency of the {Statistical Synchronization Method}}},
   booktitle = "Proceedings of the European Simulation Symposium (ESS'93),
                Delft, The Netherlands, Oct. 25-28, 1993",
   organization = "International Society for Computer Simulation",
   year = 1993
 }
 
-
 %%
 %% OMNeT++ - Andras
 %%
 
 @Inproceedings{OppParsim03,
-  title = "Parallel Simulation Made Easy with OMNeT++",
-  author = "Y. Ahmet Sekercioglu, Andr\'{a}s Varga and Gregory K. Egan",
-  booktitle = "Proceedings of the European Simulation Symposium (ESS 2003), 
+  title = {{Parallel Simulation Made Easy with OMNeT++}},
+  author = "Y. Ahmet {\c{S}}ekercio{\u{g}}lu and  Andr\'{a}s Varga and Gregory K. Egan",
+  booktitle = "Proceedings of the European Simulation Symposium (ESS 2003),
                26-29 Oct, 2003, Delft, The Netherlands",
   organization = "International Society for Computer Simulation",
   year = 2003
@@ -74,8 +74,8 @@
 
 @Inproceedings{ParsimCrit03,
   title = "A Practical Efficiency Criterion for the Null Message Algorithm",
-  author = "Andr\'{a}s Varga, Y. Ahmet Sekercioglu and Gregory K. Egan",
-  booktitle = "Proceedings of the European Simulation Symposium (ESS 2003), 
+  author = "Andr\'{a}s Varga and Y. Ahmet {\c{S}}ekercio{\u{g}}lu and Gregory K. Egan",
+  booktitle = "Proceedings of the European Simulation Symposium (ESS 2003),
                26-29 Oct, 2003, Delft, The Netherlands",
   organization = "International Society for Computer Simulation",
   year = 2003
@@ -83,18 +83,18 @@
 
 @Article{Edu99,
   author = "Andr\'{a}s Varga",
-  title = "Using the {OMNeT++} Discrete Event Simulation System in Education",
+  title = {{Using the {OMNeT++} Discrete Event Simulation System in Education}},
   journal = "IEEE Transactions on Education",
   month = nov,
   volume = 42,
   number = 4,
   pages = 372,
   year = 1999,
-  note = "on CD-ROM issue; journal contains abstract"
+  note = "(on CD-ROM issue; journal contains abstract)"
 }
 
 @Inproceedings{KSplit98,
-  title = "{K-split} -- On-Line Density Estimation for Simulation Result Collection",
+  title = {{{K-split} -- On-Line Density Estimation for Simulation Result Collection}},
   author = "Andr\'{a}s Varga",
   booktitle = "Proceedings of the European Simulation Symposium (ESS'98),
                Nottingham, UK, October 26-28",
@@ -103,9 +103,10 @@
 }
 
 @Inproceedings{Paramtop98,
-  title = "Parameterized Topologies for Simulation Programs",
+  title = {{Parameterized Topologies for Simulation Programs}},
   author = "Andr\'{a}s Varga",
-  booktitle = "Proceedings of the Western Multiconference on Simulation (WMC'98) /
+  booktitle = "Proceedings of the Western Multiconference on Simulation
+               (WMC'98)
                Communication Networks and Distributed Systems (CNDS'98),
                San Diego, CA, January 11-14",
   organization = "International Society for Computer Simulation",
@@ -114,8 +115,9 @@
 
 @Inproceedings{KSplit97,
   author = "Andr\'{a}s Varga and Babak Fakhamzadeh",
-  title = "The {K-Split} Algorithm for the {PDF} Approximation of Multi-Dimensional
-           Empirical Distributions without Storing Observations",
+  title = {{The {K-Split} Algorithm for the {PDF} Approximation of
+            Multi-Dimensional
+           Empirical Distributions without Storing Observations}},
   booktitle = "Proceedings of the 9th European Simulation Symposium (ESS'97),
                Passau, Germany, October 19-22, 1997",
   organization = "International Society for Computer Simulation",
@@ -125,13 +127,12 @@
 
 @Inproceedings{Flex97,
   author = {Andr\'{a}s Varga and Gy\"{o}rgy Pongor},
-  title = "Flexible Topology Description Language for Simulation Programs",
+  title = {{Flexible Topology Description Language for Simulation Programs}},
   booktitle = "Proceedings of the 9th European Simulation Symposium (ESS'97),
                Passau, Germany, October 19-22, 1997",
   pages = "225-229",
   year = 1997
 }
-
 
 %%
 %% Early OMNeT++
@@ -139,7 +140,7 @@
 
 @mastersthesis{VZThesis,
   author = "Vass, Zolt\'{a}n",
-  title = "{PVM} Extension of {OMNeT++} to Support {Statistical Synchronization}",
+  title = {{{PVM} Extension of {OMNeT++} to Support {Statistical Synchronization}}},
   school = "Technical University of Budapest",
   year = 1996,
   note = "In Hungarian"
@@ -147,21 +148,21 @@
 
 @techreport{OMNeTExamples,
   author = "Andr\'{e} Maurits and George van Montfort and Gerard van de Weerd",
-  title = "{OMNeT++} extensions and examples",
+  title = "{{{OMNeT++} Extensions and Examples}}",
   institution = "Technical University of Budapest, Dept. of Telecommunications",
   year = 1995
 }
 
 @techreport{JAR,
   author = "Jan Heijmans and Alex Paalvast and Robert van der Leij",
-  title = "Network simulation using the {JAR} compiler for the {OMNeT++} simulation system",
+  title = {{Network Simulation Using the {JAR} Compiler for the {OMNeT++} Simulation System}},
   institution = "Technical University of Budapest, Dept. of Telecommunications",
   year = 1995
 }
 
 @mastersthesis{AVThesis,
   author = "Varga, Andr\'{a}s",
-  title = "Portable User Interface for the {OMNeT++} Simulation System",
+  title = {{Portable User Interface for the {OMNeT++} Simulation System}},
   school = "Technical University of Budapest",
   year = 1994,
   note = "In Hungarian"
@@ -169,7 +170,7 @@
 
 @mastersthesis{LGThesis,
   author = "Lencse, G\'{a}bor",
-  title = "Graphical Network Editor for {OMNeT++}",
+  title = {{Graphical Network Editor for {OMNeT++}}},
   school = "Technical University of Budapest",
   year = 1994,
   note = "In Hungarian"
@@ -177,13 +178,12 @@
 
 @Inproceedings{AVTDK,
   author = "Varga, Andr\'{a}s",
-  title = "{OMNeT++} - Portable Simulation Environment in {C++}",
+  title = {{{OMNeT++} - Portable Simulation Environment in {C++}}},
   booktitle = "Proceedings of the Annual Students' Scientific Conference (TDK), 1992",
   organization = "Technical University of Budapest",
   year = 1992,
   note = "In Hungarian"
 }
-
 
 %%
 %% Other resources
@@ -191,11 +191,11 @@
 
 @Article{Kofoed95,
   author = "Kofoed, Stig",
-  title = "Portable Multitasking in {C++}",
+  title = {{Portable Multitasking in {C++}}},
   journal = "Dr. Dobb's Journal",
   month = nov,
   year = 1995,
-  note = "Download sorce from http://www.ddj.com/ftp/1995/1995.11/mtask.zip/"
+  note = "Download source from \url{http://www.ddj.com/ftp/1995/1995.11/mtask.zip/}"
 }
 
 @Book{WelchBook,
@@ -205,10 +205,9 @@
   year = 1995
 }
 
-
 @Inproceedings{Akaroa99,
   author = "G. Ewing and K. Pawlikowski and D. McNickle",
-  title = "{Akaroa2}: Exploiting Network Computing by Distributing Stochastic Simulation",
+  title = {{{Akaroa2}: Exploiting Network Computing by Distributing Stochastic Simulation}},
   booktitle = "Proceedings of the European Simulation Multiconference ESM'99,
                Warsaw, June 1999",
   organization = "International Society for Computer Simulation",
@@ -218,7 +217,7 @@
 
 @article{Goldberg91what,
     author = "David Goldberg",
-    title = "What Every Computer Scientist Should Know About Floating-Point Arithmetic",
+    title = {{What Every Computer Scientist Should Know About Floating-Point Arithmetic}},
     journal = "ACM Computing Surveys",
     volume = "23",
     number = "1",
@@ -229,13 +228,13 @@
 
 @article{Pawlikowsky02,
     author = "K. Pawlikowski and H. Jeong and J. Lee",
-    title = "On Credibility of Simulation Studies of Telecommunication Networks",
+    title = {{On Credibility of Simulation Studies of Telecommunication
+              Networks}},
     journal = "IEEE Communications Magazine",
     pages = "132--139",
     year = "2002",
     month = "jan"
 }
-
 
 %%
 %% RNGs
@@ -243,7 +242,7 @@
 
 @article{Entacher02,
     author = "K. Entacher and B. Hechenleitner and S. Wegenkittl",
-    title = "A Simple {OMNeT++} Queuing Experiment Using Parallel Streams",
+    title = {{A Simple {OMNeT++} Queuing Experiment Using Parallel Streams}},
     journal = "PARALLEL NUMERICS'02 - Theory and Applications",
     pages = "89-105",
     year = "2002",
@@ -252,38 +251,38 @@
 
 @article{Matsumoto98,
     author = "M. Matsumoto and T. Nishimura",
-    title = "{Mersenne Twister}: A 623-dimensionally equidistributed uniform pseudorandom number generator",
+    title = {{{Mersenne Twister}: A 623-dimensionally Equidistributed Uniform Pseudorandom Number Generator}},
     journal = "ACM Trans. on Modeling and Computer Simulation",
     volume = 8,
     number = 1,
     pages = "3-30",
     year = "1998",
-    note = "Source code can be downloaded from http://www.math.keio.ac.jp/~matumoto/emt.html"
+    note = "Source code can be downloaded from \url{http://www.math.keio.ac.jp/~matumoto/emt.html}"
 }
 
 @article{LEcuyer02,
     author = "P. L'Ecuyer and R. Simard and E. J. Chen and W. D. Kelton",
-    title = "An Objected-Oriented Random-Number Package with Many Long Streams and Substreams",
+    title = {{An Objected-Oriented Random-Number Package with Many Long Streams and Substreams}},
     journal = "Operations Research",
     volume = 50,
     number = 6,
     pages = "1073--1075",
     year = "2002",
-    note = "Source code can be downloaded from http://www.iro.umontreal.ca/~lecuyer/papers.html"
+    note = "Source code can be downloaded from \url{http://www.iro.umontreal.ca/~lecuyer/papers.html}"
 }
 
-
 %% to be evaluated!
+
 @article{Hellekalek98,
     author = "P. Hellekalek",
-    title = "Don't trust parallel {Monte Carlo}",
+    title = {{Don't Trust Parallel {Monte Carlo}}},
     journal = "ACM SIGSIM Simulation Digest",
     volume = 28,
     number = 1,
     pages = "82--89",
     year = "1998",
     month = "jul",
-    note = "Author's page is a great source of information, see http://random.mat.sbg.ac.at/"
+    note = "Author's page is a great source of information, see \url{http://random.mat.sbg.ac.at/}"
 }
 
 %%
@@ -292,8 +291,8 @@
 
 @article{chandymisra79,
     author = "M. Chandy and J. Misra",
-    title = "Distributed simulation: A case study in design and verication of distributed programs",
-    journal = "IEEE Transactions on Software Engineering SE-5",
+    title = {{Distributed Simulation: A Case Study in Design and Verification of Distributed Programs}},
+    journal = "IEEE Transactions on Software Engineering",
     number = "5",
     pages = "440-452",
     year = "1979",
@@ -301,49 +300,50 @@
 }
 
 @Misc{lammpi,
-  title =	{{LAM-MPI} home page},
-  howpublished = {http://www.lam-mpi.org/},
+  key = {LAM-MPI},
+  title =       {{LAM-MPI} home page},
+  howpublished = {\url{http://www.lam-mpi.org/}},
 }
 
 @Misc{quadrics,
-  title =	{Quadrics home page},
-  howpublished = {http://www.quadrics.com/},
+  key = {Quadrics},
+  title =       {Quadrics home page},
+  howpublished = {\url{http://www.quadrics.com/}},
 }
 
 @article{bagrodia00,
-  author =	 {R.~L.~Bagrodia and M.~Takai},
-  title =	 {Performance Evaluation of Conservative Algorithms in
-                  Parallel Simulation Languages},
-  year =	 {2000},
-  journal =	 ITPDS,
-  pages =	 {395--414},
-  number =	 {4},
-  url =		 {citeseer.nj.nec.com/bagrodia98performance.html},
-  volume =	 {11}
+  author =       {R.~L.~Bagrodia and M.~Takai},
+  title =        {{Performance Evaluation of Conservative Algorithms in
+                  Parallel Simulation Languages}},
+  year =         {2000},
+  journal =      ITPDS,
+  pages =        {395--414},
+  number =       {4},
+  url =          {citeseer.nj.nec.com/bagrodia98performance.html},
+  volume =       {11}
 }
+
 
 @article{mpiforum94,
   key = {MPI},
+  author = {Message Passing Interface Forum},
   pages = {165-414},
   volume = {8},
   number = {3/4},
-  title = {{MPI}: A Message-Passing Interface Standard},
+  title = {{{MPI}: A Message-Passing Interface Standard}},
   year = {1994},
   journal = IJSA,
-  note = {Message Passing Interface Forum},
 }
 
+
 @InProceedings{ongfarrell2000,
-  author =	 {Hong Ong and Paul A. Farrell},
-  title =	 {Performance comparison of {LAM/MPI}, {MPICH} and {MVICH} on a
-  		  {Linux} cluster connected by a {Gigabit Ethernet} network},
-  year =	 {2000},
-  booktitle =	 {Proceedings of the 4th Annual Linux Showcase \& Conference, Atlanta, October 10-14, 2000},
+  author =       {Hong Ong and Paul A. Farrell},
+  title =        {{Performance Comparison of {LAM/MPI}, {MPICH} and {MVICH}
+                  on a {Linux} Cluster Connected by a {Gigabit Ethernet} Network}},
+  year =         {2000},
+  booktitle =    {Proceedings of the 4th Annual Linux Showcase \& Conference, Atlanta, October 10-14, 2000},
   organization = {The USENIX Association},
 }
 
-%%% Local Variables:
-%%% mode: latex
-%%% TeX-master: "usman"
-%%% End:
+
 
