--- a/doc/src/manual/usman.tex
+++ b/doc/src/manual/usman.tex
@@ -110,8 +110,8 @@
 
 \newcommand{\tab}{\hspace*{5mm}} %% tabulator settings
 
-\newcommand{\new}{\textbf{[New!]}}
-\newcommand{\changed}{\textbf{[Changed!]}}
+\newcommand{\new}{$^{New!}$}
+\newcommand{\changed}{$^{Changed!}$}
 
 %% Colordefinition for table header rows (requires package colortbl)
 \newcommand{\tabheadcol}{\rowcolor[gray]{0.8}}
