--- a/src/nedxml/ChangeLog
+++ b/src/nedxml/ChangeLog
@@ -1,3 +1,5 @@
+2005-10-19  ------ omnetpp-3.2 released ------
+
 2005-09-22  Andras Varga
 
 	* nedbasicvalidator.cc: enabled parent module gates to get connected
