--- a/src/sim/parsim/ChangeLog
+++ b/src/sim/parsim/ChangeLog
@@ -1,3 +1,5 @@
+2005-10-19  ------ omnetpp-3.2 released ------
+
 2005-07-25  Andras Varga
 
 	* several files: adopted to cCommBuffer change (packObject(), 
