--- a/include/platdep/ChangeLog
+++ b/include/platdep/ChangeLog
@@ -1,3 +1,5 @@
+2005-10-19  ------ omnetpp-3.2 released ------
+
 2005-07-09  Andras Varga
 
 	* time.h: added opp_asctime() which produces string representation
