--- a/src/scalars/ChangeLog
+++ b/src/scalars/ChangeLog
@@ -1,3 +1,5 @@
+2005-10-19  ------ omnetpp-3.2 released ------
+
 2005-09-12  Andras Varga
 
 	* made it recognize Linux and Win32 flavour of INF/-INF.
