--- a/src/tkenv/ChangeLog
+++ b/src/tkenv/ChangeLog
@@ -1,3 +1,5 @@
+2005-10-19  ------ omnetpp-3.2 released ------
+
 2005-09-27  Andras Varga
 
 	* tkapp.cc: bugfix: should call endRun() instead of simulation.endRun()
