--- a/src/utils/ChangeLog
+++ b/src/utils/ChangeLog
@@ -1,3 +1,5 @@
+2005-10-19  ------ omnetpp-3.2 released ------
+
 2005-10-13  Andras Varga
 
 	* opp_makemake, opp_nmakemake: fix: internal abs2rel routine didn't 
