*** empty log message ***

--- a/doc/src/manual/ch-ned-lang.tex
+++ b/doc/src/manual/ch-ned-lang.tex
@@ -950,7 +950,7 @@ that are not connected.
 \label{sec:ch-ned-lang:network}
 \index{ned!network definition}
 
-Module module declarations (compound and simple module declarations)
+Module declarations (compound and simple module declarations)
 just define module types. To actually get a simulation model that
 can be run, you need to write a \textit{network definition}.
 
