--- a/src/nedc/ChangeLog
+++ b/src/nedc/ChangeLog
@@ -1,3 +1,8 @@
+2006-01-09  Andras Varga
+
+	* nedtool, opp_msgc: return exit code 0 when called without args (just
+	to print help)
+
 2005-10-19  ------ omnetpp-3.2 released ------
 
 2005-09-22  Andras Varga
