--- a/src/utils/ChangeLog
+++ b/src/utils/ChangeLog
@@ -1,3 +1,10 @@
+2006-01-09  Andras Varga
+
+	* opp_nmakemake: failed if a directory name contained "++" when the -b
+	option was specified
+
+	* opp_makedep: return exit code 0 when called without args to print help
+
 2005-10-19  ------ omnetpp-3.2 released ------
 
 2005-10-13  Andras Varga
