*** empty log message ***

--- a/doc/src/queues-tutorial/tutorial.tex
+++ b/doc/src/queues-tutorial/tutorial.tex
@@ -67,8 +67,7 @@ passages, etc. When you have something to contribute to the software
 library, please inform me so that I can include it in this package. I
 grant full acknowledgment with respect to authorship.
 
-My email address is: \url{n.d.vanforeest@math.utwente.nl}, or
-\url{nokfi@hotmail.com}.
+My email address is: \url{vanforeest@gmail.com}.
 
 OMNeT++ related questions can be posted at the OMNeT++ mailing list:
 \url{omnetpp-l@it.swin.edu.au}. Chances are high that Andr{\'a}s himself
