--- a/src/envir/ChangeLog
+++ b/src/envir/ChangeLog
@@ -1,3 +1,8 @@
+2006-03-19  Andras Varga
+
+	* omnetapp.cc: optimized checkTimeLimits() to call gettimeofday() less
+	frequently.
+
 2006-02-27  Andras Varga
 
 	* cenvir.cc: implemented getParsimProcId() and getParsimNumPartitions()
