*** empty log message ***

--- a/doc/src/queues-tutorial/tutorial.tex
+++ b/doc/src/queues-tutorial/tutorial.tex
@@ -50,9 +50,7 @@ playing with OMNeT++ and this demo.
 
 \subsection{Where to Get the Software?}
 \label{sec:where-get-software}
-You can find OMNeT++ at \url{http://whale.hit.bme.hu/omnetpp/} If you
-are too lazy to type this in, a search with \url{google.com} on
-\texttt{omnetpp} will give an instant hit. On my homepage
+You can find OMNeT++ at \url{http://www.omnetpp.org}. On my homepage
 \url{http://www.math.utwente.nl/~foreest/} you can find the latest
 release of the queueing software, a library of basic queueing systems,
 such as a multi-server queue, a processor sharing queue, etc.  If you
@@ -69,9 +67,8 @@ grant full acknowledgment with respect to authorship.
 
 My email address is: \url{vanforeest@gmail.com}.
 
-OMNeT++ related questions can be posted at the OMNeT++ mailing list:
-\url{omnetpp-l@it.swin.edu.au}. Chances are high that Andr{\'a}s himself
-answers your questions.
+OMNeT++ related questions can be posted at the OMNeT++ mailing list.
+Chances are high that Andr{\'a}s himself answers your questions.
 
 
 \subsection{Structure of This Document}
