--- a/src/tkenv/ChangeLog
+++ b/src/tkenv/ChangeLog
@@ -1,3 +1,8 @@
+2006-04-13  Andras Varga
+
+	* tkutil.cc: fixed a bug in setObjectListResult() [crash reported by 
+	Rodolfo Ribeiro Gomes and others]
+
 2006-03-19  Andras Varga
 
 	* tkapp.cc: use simulation.guessNextSimtime() to display the time of 
