--- a/src/nedc/ChangeLog
+++ b/src/nedc/ChangeLog
@@ -1,3 +1,7 @@
+2006-10-04  Andras Varga
+
+	* opp_msgc: don't accept reserved words as identifiers
+
 2006-01-12  ------ omnetpp-3.2p1 released ------
 
 2006-01-09  Andras Varga
