msg file syntax handling made more liberal: accept expressions as field initializers

--- a/src/nedxml/ChangeLog
+++ b/src/nedxml/ChangeLog
@@ -1,3 +1,8 @@
+2006-10-04  Andras Varga
+
+	* ned.y: msg file syntax handling made more liberal: accept expressions
+	as field initializers
+
 2006-01-12  ------ omnetpp-3.2p1 released ------
 
 2005-10-19  ------ omnetpp-3.2 released ------
