--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -3,6 +3,8 @@
 	* cconfig.h: getAsFilenames() enhancement: if directory name contains 
 	spaces, adds quotation marks.
 
+	* cconfig.h: added getAsFilename()
+
 2006-03-19  Andras Varga
 
 	* csimul.h: added method guessNextEvent() for use from Tkenv.
